@@ -15,6 +15,9 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
 import java.util.*;
 
@@ -27,12 +30,6 @@ class EpisodeServiceTest {
     private RickAndMortyDbCataloger dbCataloger;
 
     @Mock
-    private EpisodeRepository episodeRepository;
-
-    @Mock
-    private CharacterRepository characterRepository;
-
-    @Mock
     private EpisodeMapper episodeMapper;
 
     @InjectMocks
@@ -41,26 +38,28 @@ class EpisodeServiceTest {
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        when(dbCataloger.getEpisodes()).thenReturn(episodeRepository);
-        when(dbCataloger.getCharacters()).thenReturn(characterRepository);
     }
 
     @Test
     void testSave() {
         EpisodeDto episodeDto = new EpisodeDto();
-        Episode episode = new Episode();
-        when(episodeMapper.dtoToEntity(episodeDto)).thenReturn(episode);
+        episodeDto.setTitle("Test Episode");
+
+        var episodeRepository = mockDbEpisodes();
+        when(episodeRepository.existsByName(episodeDto.getTitle())).thenReturn(false);
+        when(episodeMapper.dtoToEntity(episodeDto)).thenReturn(new Episode());
 
         episodeService.save(episodeDto);
 
-        verify(episodeRepository).save(episode);
+        verify(episodeRepository).save(any(Episode.class));
     }
 
     @Test
-    void testSaveWhenLocationAlreadyExist() {
+    void testSaveWhenTitleAlreadyExists() {
         EpisodeDto episodeDto = new EpisodeDto();
-        episodeDto.setTitle("Pilot episode");
+        episodeDto.setTitle("Duplicate Title");
 
+        var episodeRepository = mockDbEpisodes();
         when(episodeRepository.existsByName(episodeDto.getTitle())).thenReturn(true);
 
         assertThrows(EntityExistsException.class, () -> episodeService.save(episodeDto));
@@ -68,20 +67,24 @@ class EpisodeServiceTest {
 
     @Test
     void testGetAll() {
-        List<Episode> episodes = Arrays.asList(new Episode(), new Episode());
-        when(episodeRepository.findAll()).thenReturn(episodes);
-        when(episodeMapper.entityToDto(any(Episode.class))).thenReturn(new EpisodeDto());
+        var episodeRepository = mockDbEpisodes();
+        Page<Episode> page = new PageImpl<>(List.of(new Episode(), new Episode()));
+        when(episodeRepository.findAll(any(PageRequest.class))).thenReturn(page);
 
-        List<EpisodeDto> result = episodeService.getAll();
+        when(episodeMapper.entityListToDtoPage(any(Page.class))).thenReturn(new PageImpl<>(List.of(new EpisodeDto(), new EpisodeDto())));
 
-        assertEquals(2, result.size());
+        Page<EpisodeDto> result = episodeService.getAll(0);
+
+        assertEquals(2, result.getContent().size());
     }
 
     @Test
-    void testGetById() {
-        Integer id = 1;
+    void testGetByIdSuccess() {
+        int id = 1;
+        var episodeRepository = mockDbEpisodes();
         Episode episode = new Episode();
         EpisodeDto episodeDto = new EpisodeDto();
+
         when(episodeRepository.findById(id)).thenReturn(Optional.of(episode));
         when(episodeMapper.entityToDto(episode)).thenReturn(episodeDto);
 
@@ -92,20 +95,30 @@ class EpisodeServiceTest {
 
     @Test
     void testGetByIdNotFound() {
-        Integer id = 1;
+        int id = 1;
+        var episodeRepository = mockDbEpisodes();
         when(episodeRepository.findById(id)).thenReturn(Optional.empty());
 
         assertThrows(DataNotFoundException.class, () -> episodeService.getById(id));
     }
 
     @Test
-    void testUpdate() {
-        Integer id = 1;
+    void testUpdateSuccess() {
+        int id = 1;
         EpisodeDto episodeDto = new EpisodeDto();
-        episodeDto.setCharacters(Arrays.asList(new CharacterDto()));
+        CharacterDto characterDto = new CharacterDto();
+        characterDto.setId(2);
+        episodeDto.setCharacters(List.of(characterDto));
+        episodeDto.setTitle("Updated Title");
+        episodeDto.setEpisode("S01E01");
+        episodeDto.setAirDate("December 2, 2013");
+
+        var episodeRepository = mockDbEpisodes();
+        var characterRepository = mockDbCharacters();
+
         Episode episode = new Episode();
         when(episodeRepository.findById(id)).thenReturn(Optional.of(episode));
-        when(characterRepository.findById(any())).thenReturn(Optional.of(new Character()));
+        when(characterRepository.findById(characterDto.getId())).thenReturn(Optional.of(new Character()));
 
         episodeService.update(id, episodeDto);
 
@@ -113,8 +126,20 @@ class EpisodeServiceTest {
     }
 
     @Test
-    void testDeleteById() {
-        Integer id = 1;
+    void testUpdateNotFound() {
+        int id = 1;
+        EpisodeDto episodeDto = new EpisodeDto();
+
+        var episodeRepository = mockDbEpisodes();
+        when(episodeRepository.findById(id)).thenReturn(Optional.empty());
+
+        assertThrows(DataNotFoundException.class, () -> episodeService.update(id, episodeDto));
+    }
+
+    @Test
+    void testDeleteByIdSuccess() {
+        int id = 1;
+        var episodeRepository = mockDbEpisodes();
         Episode episode = new Episode();
         when(episodeRepository.findById(id)).thenReturn(Optional.of(episode));
 
@@ -124,13 +149,26 @@ class EpisodeServiceTest {
     }
 
     @Test
-    void testRemoveCharacterFromLocation() {
-        Integer episodeId = 1;
-        Integer characterId = 2;
+    void testDeleteByIdNotFound() {
+        int id = 1;
+        var episodeRepository = mockDbEpisodes();
+        when(episodeRepository.findById(id)).thenReturn(Optional.empty());
+
+        assertThrows(DataNotFoundException.class, () -> episodeService.deleteById(id));
+    }
+
+    @Test
+    void testRemoveCharacterFromLocationSuccess() {
+        int episodeId = 1;
+        int characterId = 2;
+
+        var episodeRepository = mockDbEpisodes();
+        var characterRepository = mockDbCharacters();
+
         Episode episode = new Episode();
         Character character = new Character();
-        episode.setCharacters(new HashSet<>(Collections.singletonList(character)));
-        character.setEpisodes(new HashSet<>(Collections.singletonList(episode)));
+        episode.setCharacters(new HashSet<>(Set.of(character)));
+        character.setEpisodes(new HashSet<>(Set.of(episode)));
 
         when(episodeRepository.findById(episodeId)).thenReturn(Optional.of(episode));
         when(characterRepository.findById(characterId)).thenReturn(Optional.of(character));
@@ -141,5 +179,43 @@ class EpisodeServiceTest {
         verify(characterRepository).save(character);
         assertTrue(episode.getCharacters().isEmpty());
         assertTrue(character.getEpisodes().isEmpty());
+    }
+
+    @Test
+    void testRemoveCharacterFromLocationNotFoundEpisode() {
+        int episodeId = 1;
+        int characterId = 2;
+
+        var episodeRepository = mockDbEpisodes();
+        when(episodeRepository.findById(episodeId)).thenReturn(Optional.empty());
+
+        assertThrows(DataNotFoundException.class, () -> episodeService.removeCharacterFromLocation(episodeId, characterId));
+    }
+
+    @Test
+    void testRemoveCharacterFromLocationNotFoundCharacter() {
+        int episodeId = 1;
+        int characterId = 2;
+
+        var episodeRepository = mockDbEpisodes();
+        var characterRepository = mockDbCharacters();
+
+        when(episodeRepository.findById(episodeId)).thenReturn(Optional.of(new Episode()));
+        when(characterRepository.findById(characterId)).thenReturn(Optional.empty());
+
+        assertThrows(DataNotFoundException.class, () -> episodeService.removeCharacterFromLocation(episodeId, characterId));
+    }
+
+
+    private EpisodeRepository mockDbEpisodes() {
+        var repo = mock(com.rick_morty.rick_morty_data.repository.web.EpisodeRepository.class);
+        when(dbCataloger.getEpisodes()).thenReturn(repo);
+        return repo;
+    }
+
+    private CharacterRepository mockDbCharacters() {
+        var repo = mock(com.rick_morty.rick_morty_data.repository.web.CharacterRepository.class);
+        when(dbCataloger.getCharacters()).thenReturn(repo);
+        return repo;
     }
 }
